# oscilos

./: .gitignore  CMakeLists.txt  dndwindow.cpp  dndwindow.hpp  main.cpp  main_dnd.cpp  oscilos.glade
